--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "dark--next",
   "displayName": "Dark+ Next",
+  "author": "Nik Tysiachnyi",
+  "icon": "images/next.jpg",
+  "publisher": "NikTysiachnyi",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tysiachnyi/dark--next"
+  },
   "description": "Next iteration of the default Dark+ theme",
-  "version": "0.0.1",
+  "version": "0.0.5",
   "engines": {
     "vscode": "^1.78.0"
   },
