--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "dark--next",
   "displayName": "Dark+ Next",
-  "author": "Nik Tysiachnyi",
+  "author": "Nik Tysiachnyi [nikita.tysiachnyi@gmail.com]",
   "icon": "images/next.jpg",
   "publisher": "NikTysiachnyi",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/tysiachnyi/dark--next"
