--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dark--next",
   "displayName": "Dark+ Next",
   "author": "Nik Tysiachnyi [nikita.tysiachnyi@gmail.com]",
-  "icon": "images/next.jpg",
+  "icon": "images/logo-color.png",
   "publisher": "NikTysiachnyi",
   "license": "MIT",
   "repository": {
