--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "dark--next",
   "displayName": "Dark+ Next",
-  "author": "Nik Tysiachnyi [nikita.tysiachnyi@gmail.com]",
+  "author": {
+    "email": "nikita.tysiachnyi@gmail.com",
+    "name": "Nik Tysiachnyi"
+  },
   "icon": "images/logo-color.png",
   "publisher": "NikTysiachnyi",
   "license": "MIT",
@@ -9,11 +12,19 @@
     "type": "git",
     "url": "https://github.com/tysiachnyi/dark--next"
   },
-  "description": "Next iteration of the default Dark+ theme",
-  "version": "1.3.2",
+  "description": "Fresh look for the default Dark+ && Dark Modrern themes.",
+  "version": "1.3.3",
   "engines": {
     "vscode": "^1.78.0"
   },
+  "keywords": [
+    "theme",
+    "Dark Theme",
+    "Dark+",
+    "Dark Modern",
+    "Dark+ Next",
+    "Next"
+  ],
   "categories": [
     "Themes"
   ],
